# pytest-ot

./: Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: build-and-test.yml  publish.yml  release-on-tag.yml
src/pytest_ot/: __init__.py  instrumentation.py  plugin.py
tests/: test_plugin.py  test_resource.py  test_sessions.py
