[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    opentelemetry-api
    opentelemetry-container-distro
    opentelemetry-sdk
    opentelemetry-semantic-conventions
    pytest

[options.extras_require]
dev =
    black
    build
    flake8
    flake8-black
    isort
    mypy
    pre-commit
    pytest
    pytest-cov
    pytest-xdist
    twine

[options.packages.find]
where = src

[options.entry_points]
pytest11 =
    pytest_ot = pytest_ot.plugin
